feat(deps): update to Angular v20
Fixes #249

Signed-off-by: Ricardo Chavarria <jr.chavarria21@gmail.com>

--- a/projects/web/src/_theme.scss
+++ b/projects/web/src/_theme.scss
@@ -6,36 +6,18 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$app-primary: mat.define-palette(mat.$blue-palette, 700);
-$app-accent: mat.define-palette(mat.$red-palette, 700);
+$app-primary: mat.m2-define-palette(mat.$m2-blue-palette, 700);
+$app-accent: mat.m2-define-palette(mat.$m2-red-palette, 700);
 
 // The warn palette is optional (defaults to red).
-$app-warn: mat.define-palette(mat.$deep-orange-palette);
+$app-warn: mat.m2-define-palette(mat.$m2-deep-orange-palette);
 
-// Override the grey background with white
-mat.$light-theme-background-palette: (
-  status-bar: map.get(mat.$grey-palette, 300),
-  app-bar: map.get(mat.$grey-palette, 100),
-  background: map.get(mat.$grey-palette, A100),
-  hover: rgba(black, 0.04),
-  card: white,
-  dialog: white,
-  disabled-button: rgba(black, 0.12),
-  raised-button: white,
-  focused-button: rgba(black, 0.12),
-  selected-button: map.get(mat.$grey-palette, 300),
-  selected-disabled-button: map.get(mat.$grey-palette, 400),
-  disabled-button-toggle: map.get(mat.$grey-palette, 200),
-  unselected-chip: map.get(mat.$grey-palette, 300),
-  disabled-list-option: map.get(mat.$grey-palette, 200)
-);
-
-$custom-typography: mat.define-typography-config(
-  $body-2: mat.define-typography-level(16px, 24px, 400)
+$custom-typography: mat.m2-define-typography-config(
+  $body-2: mat.m2-define-typography-level(16px, 24px, 400)
 );
 
 // Create the theme object (a Sass map containing all of the palettes).
-$app-theme: mat.define-light-theme(
+$app-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $app-primary,
