--- a/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
+++ b/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
@@ -112,10 +112,10 @@
       comunícate con el equipo organizador lo antes posible:
     </p>
     <ul>
-      <li>Mensaje directo: Michael Prentice (@splaktar)</li>
-      <li>Mensaje directo: Jorge Cano (@jorgeucano)</li>
-      <li>Mensaje directo: Andrés Villanueva (@villanuevand)</li>
-      <li>Email: <a href="mailto:soporte@angular.lat">soporte@angular.lat</a></li>
+      <li>Mensaje directo: Michael Prentice (&#64;splaktar)</li>
+      <li>Mensaje directo: Jorge Cano (&#64;jorgeucano)</li>
+      <li>Mensaje directo: Andrés Villanueva (&#64;villanuevand)</li>
+      <li>Email: <a href="mailto:soporte@angular.lat">soporte&#64;angular.lat</a></li>
     </ul>
     <h3>¿Qué pasa después?</h3>
     <ul>
