--- a/projects/web/src/app/landing/landing.component.scss
+++ b/projects/web/src/app/landing/landing.component.scss
@@ -42,6 +42,6 @@ main {
   }
   h1,
   h2 {
-    color: mat.get-color-from-palette(theme.$app-primary);
+    color: mat.m2-get-color-from-palette(theme.$app-primary);
   }
 }
