--- a/projects/web/src/app/meetups/meetups.component.scss
+++ b/projects/web/src/app/meetups/meetups.component.scss
@@ -9,7 +9,7 @@ main {
   h1,
   h2,
   h3 {
-    color: mat.get-color-from-palette(theme.$app-primary);
+    color: mat.m2-get-color-from-palette(theme.$app-primary);
   }
 
   section {
