--- a/projects/web/src/app/sponsors/sponsors.component.scss
+++ b/projects/web/src/app/sponsors/sponsors.component.scss
@@ -7,7 +7,7 @@
 }
 h1,
 h2 {
-  color: mat.get-color-from-palette(theme.$app-primary);
+  color: mat.m2-get-color-from-palette(theme.$app-primary);
 }
 section {
   display: flex;
