--- a/projects/web/src/app/meetups/meetups.component.html
+++ b/projects/web/src/app/meetups/meetups.component.html
@@ -1,7 +1,7 @@
 <main>
   <h1 class="mat-headline-4">Listado de Meetups</h1>
   <section>
-    <ng-container *ngFor="let meeting of meetings">
+    @for (meeting of meetings; track meeting) {
       <a [href]="meeting.meetupUrl" [title]="meeting.name" rel="noopener" target="_blank">
         <mat-card appearance="outlined">
           <mat-card-header>
@@ -13,20 +13,21 @@
             [src]="meeting.logoUrl === null ? 'assets/no_image.jpg' : meeting.logoUrl"
             [alt]="meeting.name + ' logo'"
             [ngClass]="meeting.logoType"
-          />
+            />
           <mat-card-actions align="end">
-            <a
-              mat-button
-              [href]="meeting.meetupUrl"
-              *ngIf="meeting.meetupUrl"
-              color="accent"
-              rel="noopener"
-              target="_blank"
-              >Sitio</a
-            >
-          </mat-card-actions>
-        </mat-card>
-      </a>
-    </ng-container>
-  </section>
-</main>
+            @if (meeting.meetupUrl) {
+              <a
+                mat-button
+                [href]="meeting.meetupUrl"
+                color="accent"
+                rel="noopener"
+                target="_blank"
+                >Sitio</a
+                >
+              }
+            </mat-card-actions>
+          </mat-card>
+        </a>
+      }
+    </section>
+  </main>
