--- a/projects/web/src/app/top-nav/top-nav.component.html
+++ b/projects/web/src/app/top-nav/top-nav.component.html
@@ -1,13 +1,14 @@
 <mat-toolbar color="primary" class="mat-elevation-z1" role="banner">
-  <button
-    type="button"
-    aria-label="Toggle sidenav"
-    mat-icon-button
-    (click)="navService.toggleDrawer()"
-    *ngIf="navService.isHandset | async"
-  >
-    <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-  </button>
+  @if (navService.isHandset | async) {
+    <button
+      type="button"
+      aria-label="Toggle sidenav"
+      mat-icon-button
+      (click)="navService.toggleDrawer()"
+      >
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+  }
   <img
     width="40"
     alt="Logo de Angular"
