--- a/projects/web/src/app/conferences/conferences.component.html
+++ b/projects/web/src/app/conferences/conferences.component.html
@@ -2,66 +2,53 @@
   <h1 class="mat-headline-4">Próximas Conferencias</h1>
   <section>
     @for (conference of conferences; track conference) {
-      <a [href]="conference.siteUrl" rel="noopener" target="_blank">
-        <mat-card appearance="outlined">
-          <mat-card-header>
-            <mat-card-title>{{ conference.name }}</mat-card-title>
-            <mat-card-subtitle>{{ conference.city }}, {{ conference.country }}</mat-card-subtitle>
-            <mat-card-subtitle>{{ conference.dateString }}</mat-card-subtitle>
-          </mat-card-header>
-          <img
-            mat-card-image
-            [src]="conference.logoUrl"
-            [alt]="conference.name + ' logo'"
-            [ngClass]="conference.logoType"
-            />
-          <mat-card-actions align="end">
-            @if (conference.siteUrl) {
-              <a
-                mat-button
-                [href]="conference.siteUrl"
-                color="accent"
-                rel="noopener"
-                target="_blank"
-                >Sitio</a
-                >
-              }
-              @if (conference.ticketsUrl) {
-                <a
-                  mat-button
-                  [href]="conference.ticketsUrl"
-                  color="accent"
-                  rel="noopener"
-                  target="_blank"
-                  >Entradas</a
-                  >
-                }
-                @if (conference.cfpUrl) {
-                  <a
-                    mat-button
-                    [href]="conference.cfpUrl"
-                    color="accent"
-                    matTooltip="Convocatoria Para Presentadores"
-                    rel="noopener"
-                    target="_blank"
-                    >CFP</a
-                    >
-                  }
-                </mat-card-actions>
-              </mat-card>
-            </a>
+    <a [href]="conference.siteUrl" rel="noopener" target="_blank">
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title>{{ conference.name }}</mat-card-title>
+          <mat-card-subtitle>{{ conference.city }}, {{ conference.country }}</mat-card-subtitle>
+          <mat-card-subtitle>{{ conference.dateString }}</mat-card-subtitle>
+        </mat-card-header>
+        <img
+          mat-card-image
+          [src]="conference.logoUrl"
+          [alt]="conference.name + ' logo'"
+          [ngClass]="conference.logoType"
+        />
+        <mat-card-actions align="end">
+          @if (conference.siteUrl) {
+          <a mat-button [href]="conference.siteUrl" color="accent" rel="noopener" target="_blank"
+            >Sitio</a
+          >
+          } @if (conference.ticketsUrl) {
+          <a mat-button [href]="conference.ticketsUrl" color="accent" rel="noopener" target="_blank"
+            >Entradas</a
+          >
+          } @if (conference.cfpUrl) {
+          <a
+            mat-button
+            [href]="conference.cfpUrl"
+            color="accent"
+            matTooltip="Convocatoria Para Presentadores"
+            rel="noopener"
+            target="_blank"
+            >CFP</a
+          >
           }
-          @if (conferences.length === 0) {
-            <mat-card appearance="outlined">
-              <mat-card-header>
-                <mat-card-title>Próximamente</mat-card-title>
-                <mat-card-subtitle>Envíanos los detalles de tu evento</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content style="min-height: 100px"></mat-card-content>
-              <mat-card-actions align="end">
-                <a mat-stroked-button href="mailto:soporte@angular.lat" color="primary">Enviar</a>
-              </mat-card-actions>
-            </mat-card>
-          }
-        </section>
-      </main>
+        </mat-card-actions>
+      </mat-card>
+    </a>
+    } @if (conferences.length === 0) {
+    <mat-card appearance="outlined">
+      <mat-card-header>
+        <mat-card-title>Próximamente</mat-card-title>
+        <mat-card-subtitle>Envíanos los detalles de tu evento</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content style="min-height: 100px"></mat-card-content>
+      <mat-card-actions align="end">
+        <a mat-stroked-button href="mailto:soporte@angular.lat" color="primary">Enviar</a>
+      </mat-card-actions>
+    </mat-card>
+    }
+  </section>
+</main>
