--- a/projects/web/src/app/meetups/meetups.component.html
+++ b/projects/web/src/app/meetups/meetups.component.html
@@ -2,32 +2,27 @@
   <h1 class="mat-headline-4">Listado de Meetups</h1>
   <section>
     @for (meeting of meetings; track meeting) {
-      <a [href]="meeting.meetupUrl" [title]="meeting.name" rel="noopener" target="_blank">
-        <mat-card appearance="outlined">
-          <mat-card-header>
-            <mat-card-title>{{ meeting.name }}</mat-card-title>
-            <mat-card-subtitle>{{ meeting.city }}, {{ meeting.country }}</mat-card-subtitle>
-          </mat-card-header>
-          <img
-            mat-card-image
-            [src]="meeting.logoUrl === null ? 'assets/no_image.jpg' : meeting.logoUrl"
-            [alt]="meeting.name + ' logo'"
-            [ngClass]="meeting.logoType"
-            />
-          <mat-card-actions align="end">
-            @if (meeting.meetupUrl) {
-              <a
-                mat-button
-                [href]="meeting.meetupUrl"
-                color="accent"
-                rel="noopener"
-                target="_blank"
-                >Sitio</a
-                >
-              }
-            </mat-card-actions>
-          </mat-card>
-        </a>
-      }
-    </section>
-  </main>
+    <a [href]="meeting.meetupUrl" [title]="meeting.name" rel="noopener" target="_blank">
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title>{{ meeting.name }}</mat-card-title>
+          <mat-card-subtitle>{{ meeting.city }}, {{ meeting.country }}</mat-card-subtitle>
+        </mat-card-header>
+        <img
+          mat-card-image
+          [src]="meeting.logoUrl === null ? 'assets/no_image.jpg' : meeting.logoUrl"
+          [alt]="meeting.name + ' logo'"
+          [ngClass]="meeting.logoType"
+        />
+        <mat-card-actions align="end">
+          @if (meeting.meetupUrl) {
+          <a mat-button [href]="meeting.meetupUrl" color="accent" rel="noopener" target="_blank"
+            >Sitio</a
+          >
+          }
+        </mat-card-actions>
+      </mat-card>
+    </a>
+    }
+  </section>
+</main>
