feat(nav): añadir enlace a v10.docs

--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -34,6 +34,10 @@
         <mat-icon matListItemIcon>description</mat-icon>
         <span matListItemTitle>Documentación</span>
       </a>
+      <a mat-list-item href="https://v10.docs.angular.lat" target="_blank" rel="noopener">
+        <mat-icon matListItemIcon>archive</mat-icon>
+        <span matListItemTitle>Documentación v10</span>
+      </a>
       <mat-list>
         <h3 matSubheader>Guías</h3>
         <a mat-list-item [routerLink]="['organizar/meetup']" routerLinkActive="active">
